# Project
cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(rntcsv VERSION 1.0 LANGUAGES CXX)
set(CXX_STANDARD 17)


add_library(rntcsv INTERFACE)
target_sources(rntcsv PRIVATE public/headers/rapidcsv.h)
target_include_directories(rntcsv INTERFACE public/headers)

enable_testing()
  # Test macro add_unit_test
macro(add_unit_test testname)
  FILE(GLOB sources tests/${testname}*.cpp)
  add_executable(${testname})
  target_sources(${testname} PRIVATE  ${sources})
  add_test(NAME ${testname} COMMAND "${PROJECT_BINARY_DIR}/${testname}")
  target_link_libraries(${testname} PUBLIC rntcsv)
endmacro(add_unit_test)

# Unit tests
add_unit_test(test001)
add_unit_test(test002)
add_unit_test(test003)
add_unit_test(test004)
add_unit_test(test005)
add_unit_test(test006)
add_unit_test(test007)
add_unit_test(test008)
add_unit_test(test009)
add_unit_test(test010)
add_unit_test(test011)
add_unit_test(test012)
add_unit_test(test013)
add_unit_test(test014)
add_unit_test(test015)
add_unit_test(test016)
add_unit_test(test017)
add_unit_test(test018)
add_unit_test(test019)
add_unit_test(test020)
add_unit_test(test021)
add_unit_test(test022)
add_unit_test(test023)
add_unit_test(test024)
add_unit_test(test025)
add_unit_test(test026)
add_unit_test(test027)
add_unit_test(test028)
add_unit_test(test029)
add_unit_test(test030)
add_unit_test(test031)
add_unit_test(test032)
add_unit_test(test033)
add_unit_test(test034)
add_unit_test(test035)
add_unit_test(test036)
add_unit_test(test037)
add_unit_test(test038)
add_unit_test(test039)
add_unit_test(test040)
add_unit_test(test041)
add_unit_test(test042)
add_unit_test(test043)
add_unit_test(test044)
add_unit_test(test045)
add_unit_test(test046)
add_unit_test(test047)
add_unit_test(test048)
add_unit_test(test049)
add_unit_test(test050)
add_unit_test(test051)
add_unit_test(test052)
add_unit_test(test053)
add_unit_test(test054)
add_unit_test(test055)
add_unit_test(test056)
add_unit_test(test057)
add_unit_test(test058)
add_unit_test(test059)
add_unit_test(test060)
add_unit_test(test061)
add_unit_test(test062)
add_unit_test(test063)
add_unit_test(test064)
add_unit_test(test065)
add_unit_test(test066)
add_unit_test(test067)
add_unit_test(test068)
add_unit_test(test069)
add_unit_test(test070)
add_unit_test(test071)
add_unit_test(test072)
add_unit_test(test073)
add_unit_test(test074)
add_unit_test(test075)
add_unit_test(test076)
add_unit_test(test077)
add_unit_test(test078)
add_unit_test(test079)
add_unit_test(test080)
add_unit_test(test081)
add_unit_test(test082)
add_unit_test(test083)
add_unit_test(test084)
add_unit_test(test085)
add_unit_test(test086)

# perf tests
#add_perf_test(ptest001)
#add_perf_test(ptest002)

  # Examples
  # Test macro add_example
macro(add_example testname)
  add_executable(${testname} examples/${testname}.cpp)
  target_link_libraries(${testname} PUBLIC rntcsv)
endmacro(add_example)

add_example(ex001 examples/ex001.cpp)
add_example(ex002 examples/ex002.cpp)
add_example(ex003 examples/ex003.cpp)
add_example(ex004 examples/ex004.cpp)
add_example(ex005 examples/ex005.cpp)
add_example(ex006 examples/ex006.cpp)
add_example(ex007 examples/ex007.cpp)
add_example(ex008 examples/ex008.cpp)
add_example(ex009 examples/ex009.cpp)
